Half afgerond - Braintraining last changes

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -344,8 +344,24 @@
   "brain.session.correctSummary": "Richtig: {{correct}}/{{total}}",
   "brain.session.retry": "Nochmal",
   "brain.session.backToOverview": "Zur Übersicht",
+  "brain.session.correctLabel": "Richtig",
+  "brain.session.roundsShort": "Runden",
+  "brain.session.undo": "Rückgängig",
+  "brain.session.tapNow": "Jetzt tippen",
+  "brain.session.matched": "Treffer",
+  "brain.session.missed": "Verpasst",
+  "brain.session.tryAgain": "Nochmal versuchen",
+  "brain.session.selectedLabel": "Gewählt",
+  "brain.session.sequence.correct": "Richtige Reihenfolge!",
+  "brain.session.sequence.incorrect": "Falsche Reihenfolge, versuche es erneut.",
+  "brain.session.pairs.prompt": "Finde die passenden Paare",
+  "brain.session.pairs.progress": "{{matched}}/{{total}} Paare gefunden",
+  "brain.session.reaction.hint": "Reagiere so schnell wie möglich",
   "brain.session.feedback.correct": "Gut gemacht!",
   "brain.session.feedback.incorrect": "Versuch es nochmal",
+  "brain.reaction.smoke.star": "Tippe, wenn du einen Stern siehst.",
+  "brain.reaction.smoke.heart": "Tippe, wenn ein Herz erscheint.",
+  "brain.reaction.smoke.green": "Tippe bei grüner Farbe.",
   "brain.categories.memory.title": "Gedächtnis",
   "brain.categories.memory.subtitle": "Wörter und Muster merken",
   "brain.categories.attention.title": "Aufmerksamkeit",
@@ -383,6 +399,15 @@
   "brain.exercises.flexSwitchRules.title": "Regelwechsel",
   "brain.exercises.flexSwitchRules.subtitle": "Abwechselnd größte/kleinste Zahl",
   "brain.exercises.flexSwitchRules.description": "Gerade Runden: größte Zahl, ungerade Runden: kleinste Zahl.",
+  "brain.exercises.memoryPairsSmoke.title": "Kartenpaare (Demo)",
+  "brain.exercises.memoryPairsSmoke.subtitle": "Finde einfache Paare",
+  "brain.exercises.memoryPairsSmoke.description": "Decke Karten auf und finde die passenden Symbole.",
+  "brain.exercises.logicSequenceSmoke.title": "Schnelle Reihenfolge (Demo)",
+  "brain.exercises.logicSequenceSmoke.subtitle": "Tippe die Reihenfolge",
+  "brain.exercises.logicSequenceSmoke.description": "Wähle die richtige Reihenfolge der kurzen Liste.",
+  "brain.exercises.reactionTapSmoke.title": "Tippen bei Signal (Demo)",
+  "brain.exercises.reactionTapSmoke.subtitle": "Reagiere auf das Ziel-Symbol",
+  "brain.exercises.reactionTapSmoke.description": "Tippe nur, wenn das Ziel erscheint; überspringe alle anderen.",
   "brain.exercises.pairsMemory.title": "Bild-Paare",
   "brain.exercises.pairsMemory.subtitle": "Passende Symbole finden",
   "brain.exercises.pairsMemory.description": "Decke Karten auf und merke dir die Position der Motive.",
