--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -344,8 +344,24 @@
   "brain.session.correctSummary": "Correct: {{correct}}/{{total}}",
   "brain.session.retry": "Retry",
   "brain.session.backToOverview": "Back to overview",
+  "brain.session.correctLabel": "Correct",
+  "brain.session.roundsShort": "Rounds",
+  "brain.session.undo": "Undo",
+  "brain.session.tapNow": "Tap now",
+  "brain.session.matched": "Hit",
+  "brain.session.missed": "Miss",
+  "brain.session.tryAgain": "Try again",
+  "brain.session.selectedLabel": "Selected",
+  "brain.session.sequence.correct": "Correct order!",
+  "brain.session.sequence.incorrect": "Wrong order, try again.",
+  "brain.session.pairs.prompt": "Find the matching pairs",
+  "brain.session.pairs.progress": "{{matched}}/{{total}} pairs found",
+  "brain.session.reaction.hint": "React as quickly as you can",
   "brain.session.feedback.correct": "Great job!",
   "brain.session.feedback.incorrect": "Try again",
+  "brain.reaction.smoke.star": "Tap when you see a star.",
+  "brain.reaction.smoke.heart": "Tap when a heart appears.",
+  "brain.reaction.smoke.green": "Tap on the green color.",
   "brain.categories.memory.title": "Memory",
   "brain.categories.memory.subtitle": "Remember words and patterns",
   "brain.categories.attention.title": "Attention",
@@ -383,6 +399,15 @@
   "brain.exercises.flexSwitchRules.title": "Switching rules",
   "brain.exercises.flexSwitchRules.subtitle": "Alternate rules each round",
   "brain.exercises.flexSwitchRules.description": "Pick the largest number on even rounds and the smallest on odd rounds.",
+  "brain.exercises.memoryPairsSmoke.title": "Card pairs (demo)",
+  "brain.exercises.memoryPairsSmoke.subtitle": "Match simple pairs",
+  "brain.exercises.memoryPairsSmoke.description": "Flip cards and find the matching symbols.",
+  "brain.exercises.logicSequenceSmoke.title": "Quick sequence (demo)",
+  "brain.exercises.logicSequenceSmoke.subtitle": "Tap items in order",
+  "brain.exercises.logicSequenceSmoke.description": "Choose the correct order for the short list shown.",
+  "brain.exercises.reactionTapSmoke.title": "Tap on cue (demo)",
+  "brain.exercises.reactionTapSmoke.subtitle": "React to the target symbol",
+  "brain.exercises.reactionTapSmoke.description": "Tap only when the target cue appears; skip all others.",
   "brain.exercises.pairsMemory.title": "Card pairs",
   "brain.exercises.pairsMemory.subtitle": "Find matching icons",
   "brain.exercises.pairsMemory.description": "Flip pairs and remember where each symbol is placed.",
