Afgerond - Verwaijderen braintraining. Echter, progress heeft nog probleem en mapstructuur moet nog worden opgeschoond

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -357,11 +357,37 @@
   "brain.session.pairs.prompt": "Finde die passenden Paare",
   "brain.session.pairs.progress": "{{matched}}/{{total}} Paare gefunden",
   "brain.session.reaction.hint": "Reagiere so schnell wie möglich",
+  "brain.session.reaction.late": "Zu spät",
+  "brain.session.next": "Weiter",
   "brain.session.feedback.correct": "Gut gemacht!",
   "brain.session.feedback.incorrect": "Versuch es nochmal",
   "brain.reaction.smoke.star": "Tippe, wenn du einen Stern siehst.",
   "brain.reaction.smoke.heart": "Tippe, wenn ein Herz erscheint.",
   "brain.reaction.smoke.green": "Tippe bei grüner Farbe.",
+  "brain.reaction.tapTarget.circle": "Tippe, wenn ein Kreis erscheint.",
+  "brain.reaction.tapTarget.triangle": "Tippe, wenn ein Dreieck erscheint.",
+  "brain.reaction.tapTarget.wordGreen": "Tippe, wenn das Wort GRÜN erscheint.",
+  "brain.reaction.tapTarget.numberThree": "Tippe, wenn die 3 erscheint.",
+  "brain.reaction.tapTarget.letterA": "Tippe, wenn der Buchstabe A erscheint.",
+  "brain.reaction.tapTarget.bell": "Tippe, wenn die Glocke erscheint.",
+  "brain.reaction.tapTarget.sun": "Tippe, wenn die Sonne erscheint.",
+  "brain.reaction.tapTarget.heart": "Tippe, wenn ein Herz erscheint.",
+  "brain.reaction.tapTarget.hand": "Tippe, wenn eine Hand erscheint.",
+  "brain.reaction.tapTarget.arrowLeft": "Tippe, wenn ein linker Pfeil erscheint.",
+  "brain.reaction.tapTarget.greenCircle": "Tippe, wenn der grüne Kreis erscheint.",
+  "brain.reaction.tapTarget.check": "Tippe, wenn ein Häkchen erscheint.",
+  "brain.reaction.tapTarget.numberFive": "Tippe, wenn die 5 erscheint.",
+  "brain.reaction.tapTarget.wordStop": "Tippe, wenn STOP erscheint.",
+  "brain.reaction.tapTarget.cat": "Tippe, wenn eine Katze erscheint.",
+  "brain.reaction.tapTarget.clock": "Tippe, wenn eine Uhr erscheint.",
+  "brain.reaction.tapTarget.leaf": "Tippe, wenn ein Blatt erscheint.",
+  "brain.reaction.tapTarget.musicNote": "Tippe, wenn eine Note erscheint.",
+  "brain.reaction.tapTarget.blueSquare": "Tippe, wenn ein blaues Quadrat erscheint.",
+  "brain.reaction.tapTarget.starGold": "Tippe, wenn ein goldener Stern erscheint.",
+  "brain.reaction.tapTarget.wordGo": "Tippe, wenn GO erscheint.",
+  "brain.reaction.tapTarget.drop": "Tippe, wenn ein Tropfen erscheint.",
+  "brain.reaction.tapTarget.smile": "Tippe, wenn ein Lächeln erscheint.",
+  "brain.reaction.tapTarget.bellWord": "Tippe, wenn KLINGEL erscheint.",
   "brain.categories.memory.title": "Gedächtnis",
   "brain.categories.memory.subtitle": "Wörter und Muster merken",
   "brain.categories.attention.title": "Aufmerksamkeit",
@@ -381,24 +407,48 @@
   "brain.exercises.memoryObjects.title": "Alltagsgegenstände",
   "brain.exercises.memoryObjects.subtitle": "Welcher Gegenstand passt?",
   "brain.exercises.memoryObjects.description": "Erinnere dich an Dinge aus dem Alltag und wähle das passende Objekt.",
+  "brain.exercises.memoryWordBridge.title": "Wortbrücken",
+  "brain.exercises.memoryWordBridge.subtitle": "Zwei Dinge logisch verbinden",
+  "brain.exercises.memoryWordBridge.description": "Finde das Wort, das den Satz sinnvoll ergänzt und die Begriffe verknüpft.",
+  "brain.exercises.memoryPairsDaily.title": "Alltagspaare",
+  "brain.exercises.memoryPairsDaily.subtitle": "Erkenne passende Paare",
+  "brain.exercises.memoryPairsDaily.description": "Merke dir Symbole aus dem Alltag und decke die zugehörigen Paare auf.",
   "brain.exercises.attentionOddOneOut.title": "Was passt nicht?",
   "brain.exercises.attentionOddOneOut.subtitle": "Finde den Ausreißer",
   "brain.exercises.attentionOddOneOut.description": "Drei Dinge gehören zusammen – tippe das, was nicht passt.",
   "brain.exercises.attentionColorWord.title": "Farbwort",
   "brain.exercises.attentionColorWord.subtitle": "Tippe die genannte Farbe",
   "brain.exercises.attentionColorWord.description": "Ignoriere die Schriftfarbe und wähle das geschriebene Wort.",
+  "brain.exercises.attentionFocusFilter.title": "Fokus-Filter",
+  "brain.exercises.attentionFocusFilter.subtitle": "Unpassendes ausblenden",
+  "brain.exercises.attentionFocusFilter.description": "Finde zügig das Element, das nicht zur Gruppe passt.",
+  "brain.exercises.attentionQuickRead.title": "Schnell lesen",
+  "brain.exercises.attentionQuickRead.subtitle": "Fixe Begriffe erkennen",
+  "brain.exercises.attentionQuickRead.description": "Lies kurze Hinweise und wähle schnell die passende Antwort.",
   "brain.exercises.logicNextInSeries.title": "Logische Reihe",
   "brain.exercises.logicNextInSeries.subtitle": "Setze die Zahl fort",
   "brain.exercises.logicNextInSeries.description": "Erkenne das Muster und wähle die nächste Zahl in der Folge.",
   "brain.exercises.logicGrouping.title": "Gruppierung",
   "brain.exercises.logicGrouping.subtitle": "Finde den Fremdkörper",
   "brain.exercises.logicGrouping.description": "Wähle das Element, das nicht zur Gruppe passt.",
+  "brain.exercises.logicOrderSteps.title": "Schritte ordnen",
+  "brain.exercises.logicOrderSteps.subtitle": "Reihenfolge richtig setzen",
+  "brain.exercises.logicOrderSteps.description": "Bringe Alltagsschritte in die sinnvolle Reihenfolge.",
+  "brain.exercises.logicReasonChoice.title": "Begründete Wahl",
+  "brain.exercises.logicReasonChoice.subtitle": "Muster erkennen und wählen",
+  "brain.exercises.logicReasonChoice.description": "Finde die Zahl, die logisch in die Reihe passt.",
   "brain.exercises.flexReverse.title": "Umkehr-Regel",
   "brain.exercises.flexReverse.subtitle": "Reagiere gegenteilig",
   "brain.exercises.flexReverse.description": "Folge Anweisungen, die das Gegenteil verlangen.",
   "brain.exercises.flexSwitchRules.title": "Regelwechsel",
   "brain.exercises.flexSwitchRules.subtitle": "Abwechselnd größte/kleinste Zahl",
   "brain.exercises.flexSwitchRules.description": "Gerade Runden: größte Zahl, ungerade Runden: kleinste Zahl.",
+  "brain.exercises.flexibilitySwitchOrder.title": "Reihenfolge wechseln",
+  "brain.exercises.flexibilitySwitchOrder.subtitle": "Schnell umsortieren",
+  "brain.exercises.flexibilitySwitchOrder.description": "Ordne Schritte neu, wenn die Regel sich ändert.",
+  "brain.exercises.flexibilityContextShift.title": "Kontextwechsel",
+  "brain.exercises.flexibilityContextShift.subtitle": "Aufgaben umdenken",
+  "brain.exercises.flexibilityContextShift.description": "Wähle die Antwort, die zur aktuellen Regel passt, auch wenn der Kontext wechselt.",
   "brain.exercises.memoryPairsSmoke.title": "Kartenpaare (Demo)",
   "brain.exercises.memoryPairsSmoke.subtitle": "Finde einfache Paare",
   "brain.exercises.memoryPairsSmoke.description": "Decke Karten auf und finde die passenden Symbole.",
