--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -357,11 +357,37 @@
   "brain.session.pairs.prompt": "Find the matching pairs",
   "brain.session.pairs.progress": "{{matched}}/{{total}} pairs found",
   "brain.session.reaction.hint": "React as quickly as you can",
+  "brain.session.reaction.late": "Too late",
+  "brain.session.next": "Next",
   "brain.session.feedback.correct": "Great job!",
   "brain.session.feedback.incorrect": "Try again",
   "brain.reaction.smoke.star": "Tap when you see a star.",
   "brain.reaction.smoke.heart": "Tap when a heart appears.",
   "brain.reaction.smoke.green": "Tap on the green color.",
+  "brain.reaction.tapTarget.circle": "Tap when a circle appears.",
+  "brain.reaction.tapTarget.triangle": "Tap when a triangle appears.",
+  "brain.reaction.tapTarget.wordGreen": "Tap when the word GREEN appears.",
+  "brain.reaction.tapTarget.numberThree": "Tap when the number 3 appears.",
+  "brain.reaction.tapTarget.letterA": "Tap when the letter A appears.",
+  "brain.reaction.tapTarget.bell": "Tap when the bell appears.",
+  "brain.reaction.tapTarget.sun": "Tap when the sun appears.",
+  "brain.reaction.tapTarget.heart": "Tap when a heart appears.",
+  "brain.reaction.tapTarget.hand": "Tap when a hand appears.",
+  "brain.reaction.tapTarget.arrowLeft": "Tap when a left arrow appears.",
+  "brain.reaction.tapTarget.greenCircle": "Tap when the green circle appears.",
+  "brain.reaction.tapTarget.check": "Tap when a checkmark appears.",
+  "brain.reaction.tapTarget.numberFive": "Tap when the number 5 appears.",
+  "brain.reaction.tapTarget.wordStop": "Tap when STOP appears.",
+  "brain.reaction.tapTarget.cat": "Tap when a cat appears.",
+  "brain.reaction.tapTarget.clock": "Tap when a clock appears.",
+  "brain.reaction.tapTarget.leaf": "Tap when a leaf appears.",
+  "brain.reaction.tapTarget.musicNote": "Tap when a music note appears.",
+  "brain.reaction.tapTarget.blueSquare": "Tap when a blue square appears.",
+  "brain.reaction.tapTarget.starGold": "Tap when a gold star appears.",
+  "brain.reaction.tapTarget.wordGo": "Tap when GO appears.",
+  "brain.reaction.tapTarget.drop": "Tap when a drop appears.",
+  "brain.reaction.tapTarget.smile": "Tap when a smile appears.",
+  "brain.reaction.tapTarget.bellWord": "Tap when KLINGEL appears.",
   "brain.categories.memory.title": "Memory",
   "brain.categories.memory.subtitle": "Remember words and patterns",
   "brain.categories.attention.title": "Attention",
@@ -381,24 +407,48 @@
   "brain.exercises.memoryObjects.title": "Everyday objects",
   "brain.exercises.memoryObjects.subtitle": "Pick the fitting item",
   "brain.exercises.memoryObjects.description": "Recall common objects and choose the one that matches the prompt.",
+  "brain.exercises.memoryWordBridge.title": "Word bridge",
+  "brain.exercises.memoryWordBridge.subtitle": "Connect two ideas",
+  "brain.exercises.memoryWordBridge.description": "Find the word that links the sentence and connects both terms.",
+  "brain.exercises.memoryPairsDaily.title": "Daily pairs",
+  "brain.exercises.memoryPairsDaily.subtitle": "Match familiar items",
+  "brain.exercises.memoryPairsDaily.description": "Memorize everyday symbols and uncover their matching pairs.",
   "brain.exercises.attentionOddOneOut.title": "Odd one out",
   "brain.exercises.attentionOddOneOut.subtitle": "Find what does not belong",
   "brain.exercises.attentionOddOneOut.description": "Three items belong together — tap the one that differs.",
   "brain.exercises.attentionColorWord.title": "Color word",
   "brain.exercises.attentionColorWord.subtitle": "Tap the written color",
   "brain.exercises.attentionColorWord.description": "Ignore the font color and choose the word that names the color.",
+  "brain.exercises.attentionFocusFilter.title": "Focus filter",
+  "brain.exercises.attentionFocusFilter.subtitle": "Filter the odd item",
+  "brain.exercises.attentionFocusFilter.description": "Quickly find the element that does not fit the group.",
+  "brain.exercises.attentionQuickRead.title": "Quick read",
+  "brain.exercises.attentionQuickRead.subtitle": "Read and choose fast",
+  "brain.exercises.attentionQuickRead.description": "Read short hints and pick the matching answer quickly.",
   "brain.exercises.logicNextInSeries.title": "Next in series",
   "brain.exercises.logicNextInSeries.subtitle": "Complete the number pattern",
   "brain.exercises.logicNextInSeries.description": "Spot the rule and choose the next number in the line.",
   "brain.exercises.logicGrouping.title": "Grouping",
   "brain.exercises.logicGrouping.subtitle": "Find the outsider",
   "brain.exercises.logicGrouping.description": "Choose the element that does not fit the group.",
+  "brain.exercises.logicOrderSteps.title": "Order the steps",
+  "brain.exercises.logicOrderSteps.subtitle": "Set the right sequence",
+  "brain.exercises.logicOrderSteps.description": "Put everyday steps into the correct order.",
+  "brain.exercises.logicReasonChoice.title": "Reasoned choice",
+  "brain.exercises.logicReasonChoice.subtitle": "Spot the rule and pick",
+  "brain.exercises.logicReasonChoice.description": "Choose the number that logically completes the pattern.",
   "brain.exercises.flexReverse.title": "Reverse choice",
   "brain.exercises.flexReverse.subtitle": "Do the opposite",
   "brain.exercises.flexReverse.description": "Follow instructions that ask you to pick the opposite response.",
   "brain.exercises.flexSwitchRules.title": "Switching rules",
   "brain.exercises.flexSwitchRules.subtitle": "Alternate rules each round",
   "brain.exercises.flexSwitchRules.description": "Pick the largest number on even rounds and the smallest on odd rounds.",
+  "brain.exercises.flexibilitySwitchOrder.title": "Switch order",
+  "brain.exercises.flexibilitySwitchOrder.subtitle": "Reshuffle quickly",
+  "brain.exercises.flexibilitySwitchOrder.description": "Arrange steps correctly when the rule changes.",
+  "brain.exercises.flexibilityContextShift.title": "Context shift",
+  "brain.exercises.flexibilityContextShift.subtitle": "Adapt the answer",
+  "brain.exercises.flexibilityContextShift.description": "Pick the response that fits the active rule, even when context shifts.",
   "brain.exercises.memoryPairsSmoke.title": "Card pairs (demo)",
   "brain.exercises.memoryPairsSmoke.subtitle": "Match simple pairs",
   "brain.exercises.memoryPairsSmoke.description": "Flip cards and find the matching symbols.",
