--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -329,6 +329,7 @@
   "trainieren.module.loading": "Modul wird geladen...",
   "trainieren.module.notFound": "Das Modul wurde nicht gefunden.",
   "trainieren.module.filtersTitle": "Intensität auswählen",
+  "trainieren.brain.title": "Gehirntraining",
   "trainieren.categories.cardio.intro": "Cardio stärkt Ihr Herz-Kreislauf-System und bringt mehr Energie in den Alltag. Diese Einheiten sind gelenkschonend, leicht verständlich und für zu Hause geeignet – ideal, um Schritt für Schritt Ausdauer aufzubauen, ohne sich zu überfordern.",
   "trainieren.categories.strength.intro": "Kraft erhalten heißt selbstständig bleiben. Diese Übungen unterstützen Muskeln und Stabilität mit ruhigen, kontrollierten Bewegungen – ohne Geräte oder mit einfachen Alltagsgegenständen. Perfekt, um den Körper im Alltag belastbarer zu machen.",
   "trainieren.categories.balance.intro": "Gute Balance und Beweglichkeit geben Sicherheit – beim Gehen, Drehen und Aufstehen. Hier trainieren Sie Stabilität, Koordination und sanfte Dehnung. Die Übungen sind bewusst langsam aufgebaut, damit Sie sich sicher fühlen und Fortschritte merken.",
@@ -339,6 +340,10 @@
   "trainieren.filters.apply": "Anwenden",
   "trainieren.filters.reset": "Zurücksetzen",
   "trainieren.filters.all": "Alle",
+  "brain.filter.label": "Welche Art von Gehirntraining?",
+  "brain.types.memory": "Gedächtnis",
+  "brain.types.language": "Sprache",
+  "brain.types.patterns": "Muster",
   "trainieren.minutes": "Minuten",
   "trainieren.trainingList.empty": "Keine Trainings für diese Auswahl gefunden.",
   "trainieren.detail.loading": "Training wird geladen...",
