--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -329,6 +329,7 @@
   "trainieren.module.loading": "Loading module...",
   "trainieren.module.notFound": "The module could not be found.",
   "trainieren.module.filtersTitle": "Choose an intensity",
+  "trainieren.brain.title": "Brain Training",
   "trainieren.categories.cardio.intro": "Cardio supports your heart and circulation and brings more energy to everyday life. These sessions are joint-friendly, easy to follow, and suitable for home – ideal for building endurance step by step without overdoing it.",
   "trainieren.categories.strength.intro": "Maintaining strength helps you stay independent. These exercises support muscles and stability with calm, controlled movements – without equipment or with simple everyday items. A practical way to feel stronger and more capable in daily activities.",
   "trainieren.categories.balance.intro": "Better balance and flexibility increase confidence when walking, turning, and standing up. These sessions train stability, coordination, and gentle mobility. The pace is deliberately calm so you can feel safe and notice steady progress.",
@@ -339,6 +340,10 @@
   "trainieren.filters.apply": "Apply",
   "trainieren.filters.reset": "Reset",
   "trainieren.filters.all": "All",
+  "brain.filter.label": "What type of brain training?",
+  "brain.types.memory": "Memory",
+  "brain.types.language": "Language",
+  "brain.types.patterns": "Patterns",
   "trainieren.minutes": "Minutes",
   "trainieren.trainingList.empty": "No trainings found for this selection.",
   "trainieren.detail.loading": "Loading training...",
