Afgerond - Braintraining functionaliteit is compleet.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -344,6 +344,20 @@
   "brain.types.memory": "Gedächtnis",
   "brain.types.language": "Sprache",
   "brain.types.patterns": "Muster",
+  "brain.ui.tapStart": "Tippe auf „Training starten“, um zu beginnen.",
+  "brain.ui.finish": "Fertig",
+  "brain.ui.completed": "Abgeschlossen",
+  "brain.ui.tryAgain": "Nochmal",
+  "brain.ui.promptOddOneOut": "Tippe auf das Wort, das NICHT dazu gehört.",
+  "brain.ui.promptPattern": "Vervollständige das Muster.",
+  "brain.ui.unsupported": "Dieser Übungstyp wird nicht unterstützt.",
+  "brain.type.memory": "Gedächtnis",
+  "brain.type.language": "Sprache",
+  "brain.type.patterns": "Muster",
+  "brain.memory.watch": "Schau dir das Muster an und wiederhole es.",
+  "brain.memory.repeat": "Tippe die gleichen Felder in der Reihenfolge.",
+  "brain.memory.status": "Muster wiederholen",
+  "brain.home.subtitle": "Halte deinen Geist mit kurzen Übungen aktiv.",
   "trainieren.minutes": "Minuten",
   "trainieren.trainingList.empty": "Keine Trainings für diese Auswahl gefunden.",
   "trainieren.detail.loading": "Training wird geladen...",
@@ -384,6 +398,12 @@
   "completion.subtitle": "Jede Bewegung zählt – du machst das super.",
   "completion.cardTitle": "Training abgeschlossen!",
   "completion.body": "Du hast deine Einheit sicher beendet. Dein Körper und Geist danken es dir.",
+  "completion.brain.title": "Sehr gut!",
+  "completion.brain.subtitle": "Deine Gehirntraining-Einheit wurde gespeichert.",
+  "completion.brain.session.headerTitle": "Diese Einheit",
+  "completion.brain.stat.timeLabel": "Minuten",
+  "completion.brain.stat.resultLabel": "Ergebnis",
+  "completion.brain.result.foundWord": "Gefundenes Wort: {{word}}",
   "completion.stats.minutesUnit": "Minuten",
   "completion.stats.sessionMinutesLabel": "Diese Einheit",
   "completion.stats.totalMinutesLabel": "Trainingsminuten gesamt",
@@ -441,6 +461,9 @@
   "progress.kpi.target": "Ziel: 300",
   "progress.levelLabel": "Level",
   "progress.activeMinutesThisWeek": "Aktive Minuten (diese Woche)",
+  "progress.brain.title": "Gehirntraining",
+  "progress.brain.subtitle": "Diese Woche",
+  "progress.brain.sessions": "{count} Einheiten",
   "progress.minutesTargetLabel": "Wochenziel (Minuten)",
   "progress.minutesToGoal": "Noch {n} Minuten bis zum Wochenziel",
   "progress.highlight.title": "Starker Start!",
