--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -344,6 +344,20 @@
   "brain.types.memory": "Memory",
   "brain.types.language": "Language",
   "brain.types.patterns": "Patterns",
+  "brain.ui.tapStart": "Tap Start training to begin.",
+  "brain.ui.finish": "Finish",
+  "brain.ui.completed": "Completed",
+  "brain.ui.tryAgain": "Try again",
+  "brain.ui.promptOddOneOut": "Tap the word that does NOT belong.",
+  "brain.ui.promptPattern": "Complete the pattern.",
+  "brain.ui.unsupported": "This exercise type is not supported.",
+  "brain.type.memory": "Memory",
+  "brain.type.language": "Language",
+  "brain.type.patterns": "Patterns",
+  "brain.memory.watch": "Watch the pattern, then repeat it.",
+  "brain.memory.repeat": "Now tap the same cells in order.",
+  "brain.memory.status": "Repeat the pattern",
+  "brain.home.subtitle": "Keep your mind active with short exercises.",
   "trainieren.minutes": "Minutes",
   "trainieren.trainingList.empty": "No trainings found for this selection.",
   "trainieren.detail.loading": "Loading training...",
@@ -388,6 +402,12 @@
   "completion.subtitle": "Every move counts — you're doing great.",
   "completion.cardTitle": "Training completed!",
   "completion.body": "You finished your session safely. Your body and mind thank you.",
+  "completion.brain.title": "Great job!",
+  "completion.brain.subtitle": "Your brain training session has been saved.",
+  "completion.brain.session.headerTitle": "This session",
+  "completion.brain.stat.timeLabel": "Minutes",
+  "completion.brain.stat.resultLabel": "Result",
+  "completion.brain.result.foundWord": "Found word: {{word}}",
   "completion.stats.minutesUnit": "minutes",
   "completion.stats.sessionMinutesLabel": "This session",
   "completion.stats.totalMinutesLabel": "Total exercise minutes",
@@ -441,6 +461,9 @@
   "progress.kpi.target": "Target: 300",
   "progress.levelLabel": "Level",
   "progress.activeMinutesThisWeek": "Active minutes (this week)",
+  "progress.brain.title": "Brain training",
+  "progress.brain.subtitle": "This week",
+  "progress.brain.sessions": "{count} sessions",
   "progress.minutesTargetLabel": "Weekly goal (minutes)",
   "progress.minutesToGoal": "{n} minutes to weekly goal",
   "progress.highlight.title": "Great start!",
