--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -607,5 +607,30 @@
   "profileMotor.sessionsLeft": "Noch {{n}} Einheiten diese Woche",
   "profileMotor.nextUp": "Als Nächstes",
   "profileMotor.weeklyGoal": "Einheiten pro Woche",
-  "profileMotor.reminderNudge": "Möchtest du eine Erinnerung setzen, um dein Wochenziel zu erreichen?"
+  "profileMotor.reminderNudge": "Möchtest du eine Erinnerung setzen, um dein Wochenziel zu erreichen?",
+  "premium.panel.title": "Premium abonnieren",
+  "premium.panel.intro": "Mit Premium erhalten Sie:",
+  "premium.panel.bullets": [
+    "Zugriff auf alle Trainings in jeder Kategorie",
+    "Mehr Abwechslung für Kraft, Balance, Ausdauer und Gehirn",
+    "Trainieren ohne Einschränkungen",
+    "Monatliches Abo – jederzeit kündbar"
+  ],
+  "premium.panel.disclaimer": "Monatliches Abonnement. Kündigung jederzeit möglich.",
+  "premium.panel.activateCta": "Premium abonnieren",
+  "premium.panel.back": "Zurück",
+  "premium.purchase.failed": "Premium-Aktivierung derzeit nicht verfügbar.",
+  "premium.purchase.failedWithReason": "Premium-Aktivierung fehlgeschlagen: {{reason}}",
+  "premium.purchase.activated": "Premium aktiviert – alle Trainings freigeschaltet",
+  "premium.gate.locked": "Gesperrtes Training",
+  "premium.gate.title": "Premium erforderlich",
+  "admin.unlock.title": "Admin-Modus",
+  "admin.unlock.body": "Geben Sie den Admin-Code ein, um alle Inhalte freizuschalten.",
+  "admin.unlock.codeLabel": "Admin-Code",
+  "admin.unlock.placeholder": "Code eingeben…",
+  "admin.unlock.invalid": "Ungültiger Code.",
+  "admin.unlock.enableCta": "Admin aktivieren",
+  "admin.unlock.disableCta": "Admin deaktivieren",
+  "admin.unlock.enabled": "Admin-Modus aktiviert.",
+  "admin.unlock.disabled": "Admin-Modus deaktiviert."
 }
