Afgerond - Design premium sidepanel

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -610,14 +610,23 @@
   "profileMotor.reminderNudge": "Möchtest du eine Erinnerung setzen, um dein Wochenziel zu erreichen?",
   "premium.panel.title": "Premium abonnieren",
   "premium.panel.intro": "Mit Premium erhalten Sie:",
+  "premium.panel.trainingFallback": "Training",
+  "premium.panel.benefits.access.title": "Zugriff auf alle Trainings",
+  "premium.panel.benefits.access.subtitle": "In jeder Kategorie verfügbar",
+  "premium.panel.benefits.variety.title": "Mehr Abwechslung",
+  "premium.panel.benefits.variety.subtitle": "Für Kraft, Balance, Ausdauer und Gehirn",
+  "premium.panel.benefits.noLimits.title": "Keine Einschränkungen",
+  "premium.panel.benefits.noLimits.subtitle": "Trainieren Sie, wann immer Sie wollen",
+  "premium.panel.benefits.flexibility.title": "Maximale Flexibilität",
+  "premium.panel.benefits.flexibility.subtitle": "Monatliches Abo – jederzeit kündbar",
   "premium.panel.bullets": [
-    "Zugriff auf alle Trainings in jeder Kategorie",
+    "Zugriff auf alle Trainings",
     "Mehr Abwechslung für Kraft, Balance, Ausdauer und Gehirn",
-    "Trainieren ohne Einschränkungen",
+    "Keine Einschränkungen – trainieren Sie, wann immer Sie wollen",
     "Monatliches Abo – jederzeit kündbar"
   ],
-  "premium.panel.disclaimer": "Monatliches Abonnement. Kündigung jederzeit möglich.",
-  "premium.panel.activateCta": "Premium abonnieren",
+  "premium.panel.disclaimer": "Monatliches Abonnement. Die Kündigung ist jederzeit in den Einstellungen möglich.",
+  "premium.panel.activateCta": "Premium jetzt abonnieren",
   "premium.panel.back": "Zurück",
   "premium.purchase.failed": "Premium-Aktivierung derzeit nicht verfügbar.",
   "premium.purchase.failedWithReason": "Premium-Aktivierung fehlgeschlagen: {{reason}}",
