--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -610,14 +610,23 @@
   "profileMotor.reminderNudge": "Want to set a reminder to reach your weekly goal?",
   "premium.panel.title": "Subscribe to Premium",
   "premium.panel.intro": "With Premium you get:",
+  "premium.panel.trainingFallback": "Training",
+  "premium.panel.benefits.access.title": "Access to all trainings",
+  "premium.panel.benefits.access.subtitle": "Available in every category",
+  "premium.panel.benefits.variety.title": "More variety",
+  "premium.panel.benefits.variety.subtitle": "For strength, balance, endurance and brain",
+  "premium.panel.benefits.noLimits.title": "No limitations",
+  "premium.panel.benefits.noLimits.subtitle": "Train whenever you want",
+  "premium.panel.benefits.flexibility.title": "Maximum flexibility",
+  "premium.panel.benefits.flexibility.subtitle": "Monthly plan – cancel anytime",
   "premium.panel.bullets": [
-    "Access to all trainings in every category",
-    "More variety for strength, balance, endurance and brain training",
-    "Train without limitations",
-    "Monthly subscription – cancel anytime"
+    "Access to all trainings",
+    "More variety for strength, balance, endurance and brain",
+    "No limitations – train whenever you want",
+    "Monthly plan – cancel anytime"
   ],
-  "premium.panel.disclaimer": "Monthly subscription. Cancel anytime.",
-  "premium.panel.activateCta": "Subscribe to Premium",
+  "premium.panel.disclaimer": "Monthly subscription. Cancellation is possible anytime in settings.",
+  "premium.panel.activateCta": "Subscribe to Premium now",
   "premium.panel.back": "Back",
   "premium.purchase.failed": "Premium activation is currently unavailable.",
   "premium.purchase.failedWithReason": "Premium activation failed: {{reason}}",
