Afgerond - FG-11 a i.v.m. de login en premium functionaliteit

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -29,6 +29,23 @@
   "notifications.description": "Hier werden in die zukunft Benachrichtigungen und Meldungen angezeigt.",
   "notifications.notesSettingsSaved": "Einstellungen für Notizen wurden gespeichert.",
   "notifications.back": "Zurück",
+  "account.title": "Konto",
+  "account.subtitle": "Verwalte deinen Zugang und Status.",
+  "account.status.title": "Status",
+  "account.status.auth": "Auth: {{state}}",
+  "account.status.premiumOn": "Premium: an",
+  "account.status.premiumOff": "Premium: aus",
+  "account.status.adminOn": "Admin: an",
+  "account.status.adminOff": "Admin: aus",
+  "account.actions.title": "Aktionen",
+  "account.actions.restore": "Käufe wiederherstellen",
+  "account.actions.refresh": "Berechtigung aktualisieren",
+  "account.actions.enableAdmin": "Admin aktivieren",
+  "account.actions.disableAdmin": "Admin deaktivieren",
+  "account.actions.login": "Anmelden",
+  "account.actions.logout": "Abmelden",
+  "account.login.emailLabel": "E-Mail-Adresse",
+  "account.login.emailPlaceholder": "name@beispiel.de",
   "pageTitles.progress": "Fortschritt",
   "pageTitles.more": "Mehr",
   "pageTitles.settings": "Einstellungen",
@@ -551,6 +568,12 @@
   "profile.title": "Profil",
   "profile.subtitle": "Überblick und Verwaltung Ihrer Ziele. Alles Wichtige auf einen Blick.",
   "profile.avatar.hint": "Profilfoto ist verfügbar, sobald ein Konto aktiv ist.",
+  "profile.member.guestTitle": "Gast",
+  "profile.member.guestStatus": "Du nutzt die App als Gast. Melde dich an, um deinen Fortschritt zu sichern.",
+  "profile.member.accountTitle": "Konto",
+  "profile.member.accountStatus": "Kostenloses Konto aktiv.",
+  "profile.member.premiumTitle": "Premium",
+  "profile.member.premiumStatus": "Premium aktiv. Alle Trainings freigeschaltet.",
   "profile.member.localTitle": "Lokales Profil",
   "profile.member.localStatus": "Aktiv auf diesem Gerät",
   "profile.member.since": "seit {date}",
@@ -564,6 +587,7 @@
   "profile.focus.options.cardio": "Cardio",
   "profile.focus.options.strength": "Kraft & Muskeln",
   "profile.focus.options.balance": "Balance & Beweglichkeit",
+  "profile.focus.options.brain": "Gehirntraining",
   "profile.level.title": "Level",
   "profile.level.l1.label": "L1 Beginner",
   "profile.level.l1.description": "Starte mit ruhigen, klar geführten Einheiten.",
@@ -582,6 +606,7 @@
   "profile.minutesTarget.label": "Minuten pro Woche (optional)",
   "profile.minutesTarget.helper": "Nur wenn du ein Ziel setzen möchtest. Sonst zeigen wir Minuten nur informativ.",
   "profile.actions.edit": "Profil bearbeiten",
+  "profile.actions.loginCta": "Anmelden",
   "profile.actions.save": "Speichern",
   "profile.actions.cancel": "Abbrechen",
   "profile.version": "Fit4Senioren Version 2.1.0",
@@ -597,6 +622,7 @@
   "profile.edit.sessions.helper": "Dieses Ziel steuert deinen Wochenfortschritt.",
   "profile.edit.sessions.decrease": "Weniger Einheiten pro Woche",
   "profile.edit.sessions.increase": "Mehr Einheiten pro Woche",
+  "profile.edit.requiresLogin": "Bitte melde dich an, um dein Profil zu bearbeiten.",
   "profile.edit.level.title": "Level (nur Anzeige)",
   "profile.edit.level.subtitle": "Wird automatisch aus Punkten berechnet.",
   "profile.edit.focus.title": "Trainingsfokus",
