--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,6 +29,23 @@
   "notifications.description": "Here notifications and alerts will be shown in the future.",
   "notifications.notesSettingsSaved": "Note settings have been saved.",
   "notifications.back": "Back",
+  "account.title": "Account",
+  "account.subtitle": "Manage your access and status.",
+  "account.status.title": "Status",
+  "account.status.auth": "Auth: {{state}}",
+  "account.status.premiumOn": "Premium: on",
+  "account.status.premiumOff": "Premium: off",
+  "account.status.adminOn": "Admin: on",
+  "account.status.adminOff": "Admin: off",
+  "account.actions.title": "Actions",
+  "account.actions.restore": "Restore purchases",
+  "account.actions.refresh": "Refresh entitlement",
+  "account.actions.enableAdmin": "Enable admin",
+  "account.actions.disableAdmin": "Disable admin",
+  "account.actions.login": "Log in",
+  "account.actions.logout": "Log out",
+  "account.login.emailLabel": "Email address",
+  "account.login.emailPlaceholder": "name@example.com",
   "pageTitles.progress": "Progress",
   "pageTitles.more": "More",
   "pageTitles.settings": "Settings",
@@ -551,6 +568,12 @@
   "profile.title": "Profile",
   "profile.subtitle": "View and manage your personal progress. See goals and level at a glance.",
   "profile.avatar.hint": "Profile photo is available once an account is active.",
+  "profile.member.guestTitle": "Guest",
+  "profile.member.guestStatus": "Browsing as a guest. Log in to save your progress.",
+  "profile.member.accountTitle": "Account",
+  "profile.member.accountStatus": "Free account active on this device.",
+  "profile.member.premiumTitle": "Premium",
+  "profile.member.premiumStatus": "Premium active. All trainings unlocked.",
   "profile.member.localTitle": "Local profile",
   "profile.member.localStatus": "Active on this device",
   "profile.member.since": "since {date}",
@@ -564,6 +587,7 @@
   "profile.focus.options.cardio": "Cardio",
   "profile.focus.options.strength": "Strength & muscles",
   "profile.focus.options.balance": "Balance & mobility",
+  "profile.focus.options.brain": "Brain training",
   "profile.level.title": "Level",
   "profile.level.l1.label": "L1 Beginner",
   "profile.level.l1.description": "Start with calm, clearly guided sessions.",
@@ -579,6 +603,7 @@
   "profile.minutesTarget.label": "Minutes per week (optional)",
   "profile.minutesTarget.helper": "Only if you want to set a goal. Otherwise we show minutes only as information.",
   "profile.actions.edit": "Edit profile",
+  "profile.actions.loginCta": "Log in",
   "profile.actions.save": "Save",
   "profile.actions.cancel": "Cancel",
   "profile.version": "Fit4Seniors Version 2.1.0",
@@ -594,6 +619,7 @@
   "profile.edit.sessions.helper": "This target drives your weekly progress.",
   "profile.edit.sessions.decrease": "Fewer sessions per week",
   "profile.edit.sessions.increase": "More sessions per week",
+  "profile.edit.requiresLogin": "Please log in to edit your profile.",
   "profile.edit.level.title": "Level (read-only)",
   "profile.edit.level.subtitle": "Calculated automatically from points.",
   "profile.edit.focus.title": "Training focus",
